adjusted spacings, replaced correct variables

--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -8,8 +8,8 @@ main > .section > .title-wrapper {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 40px 16px 24px;
-}  
+  padding: var(--spacing-2xl) var(--spacing-md) var(--spacing-lg);
+}
 
 .title.grey,
 .title.light-mushroom {
@@ -28,10 +28,11 @@ main > .section > .title-wrapper {
   font-family: var(--ff-unilever-shilling);
   font-size: var(--heading-font-size-s);
   font-style: normal;
+  margin: 0;
 
   /* If I apply font-weight 600, it's too bold. Keeping it 500 for now */
-  font-weight: 500;
-  line-height: 25px;
+  font-weight: var(--typo-h2-weight);
+  line-height: var(--typo-h2-line);
 }
 
 .title.dark h2,
@@ -49,9 +50,9 @@ main > .section > .title-wrapper {
   font-family: var(--ff-chefs-hand);
   font-size: var(--heading-font-size-l);
   font-style: normal;
-  font-weight: 400;
+  font-weight: var(--typo-ch-h2-weight);
   line-height: 25px;
-  letter-spacing: -0.3px;
+  letter-spacing: var(--typo-ch-h2-tracking);
 }
 
 .title p {
@@ -61,7 +62,7 @@ main > .section > .title-wrapper {
   font-family: var(--ff-unilever-shilling);
   font-size: var(--body-font-size-xss);
   font-style: normal;
-  font-weight: 400;
+  font-weight: var(--typo-subheadline-weight);
   line-height: 22px;
   margin: 0;
 }
@@ -72,32 +73,32 @@ main > .section > .title-wrapper {
 }
 
 
-@media (width >= 900px) { 
+@media (width >= 900px) {
   .title {
     max-width: auto;
     margin: 0 auto;
-    padding: 32px 100px;
-    gap: 16px;
+    padding: 64px 100px 32px;
+    gap: var(--spacing-md);
   }
 
   .title h2 {
     color: var(--text-color);
     font-family: var(--ff-unilever-shilling);
-    font-size: 25px;
+    font-size: var(--typo-h2-size-desktop);
     font-style: normal;
-    
+
       /* Same as on mobile: Keeping it 500 for now */
-    font-weight: 500;
-    line-height: 32px; 
+    font-weight: var(--typo-h2-weight);
+    line-height: var(--typo-h2-line-desktop);
   }
 
   .title h2 .subtitle {
     color: var(--ufs-orange);
     font-family: var(--ff-chefs-hand);
-    font-size: 42px;
+    font-size: var(--typo-ch-h2-size-desktop);
     font-style: normal;
-    font-weight: 400;
-    line-height: 32px;
+    font-weight: var(--typo-ch-h2-weight);
+    line-height: var(--typo-ch-h2-line-desktop);
     letter-spacing: -0.3px;
   }
 
@@ -106,7 +107,7 @@ main > .section > .title-wrapper {
     font-family: var(--ff-unilever-shilling);
     font-size: var(--body-font-size-s);
     font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
+    font-weight: var(--typo-p1-reg-weight);
+    line-height: var(--typo-p1-reg-line-desktop);
   }
 }
